@@ -1,6 +1,6 @@
 package bench;
 
-import jdk.incubator.foreign.MemorySegment;
+import java.lang.foreign.MemorySegment;
 import jdk.incubator.vector.FloatVector;
 
 import java.nio.ByteBuffer;
@@ -303,14 +303,14 @@ public class Matrix4fvArr {
     }
 
     public ByteBuffer storeV256(ByteBuffer bb) {
-        MemorySegment ms = MemorySegment.ofByteBuffer(bb);
+        MemorySegment ms = MemorySegment.ofBuffer(bb);
         fromArray(SPECIES_256, es, 0).intoMemorySegment(ms, 0, nativeOrder());
         fromArray(SPECIES_256, es, 8).intoMemorySegment(ms, 32, nativeOrder());
         return bb;
     }
 
     public ByteBuffer storeV512(ByteBuffer bb) {
-        MemorySegment ms = MemorySegment.ofByteBuffer(bb);
+        MemorySegment ms = MemorySegment.ofBuffer(bb);
         fromArray(SPECIES_512, es, 0).intoMemorySegment(ms, 0, nativeOrder());
         return bb;
     }
